[project]
name = "digestify-topics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "openai>=1.99.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlmodel>=0.0.24",
]

[project.scripts]
digestify-topics = "digestify_topics:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.12.8",
    "types-redis>=4.6.0.20241004",
]

[tool.pytest.ini_options]
addopts = "--mypy"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
